stablished connection with mongodb and first endpoints made for userdata storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.data.mongodb.uri=mongodb+srv://user:tLWHmigZLv2KblRM@test.m9fl7rf.mongodb.net/?
+spring.data.mongodb.database=test
+retryWrites=true&w=majority
